--- a/src/main/webapp/assets/style-0.css
+++ b/src/main/webapp/assets/style-0.css
@@ -1,14 +1,13 @@
 body {
 	min-height: 100%;
-	padding-top: 80px;
+	padding-top: 85px;
 }
 
 footer {
 	margin: 0 0;
-	height: 30px;
 	width: 100%;
 	position: absolute;
-	//background-color: #f5f5f5;
+	background-color: #f5f5f5;
 }
 
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
