--- a/src/main/webapp/assets/angular-panels/angular.panels.css
+++ b/src/main/webapp/assets/angular-panels/angular.panels.css
@@ -1,14 +1,15 @@
 /*
-	@license Angular Panels version 1.0.0
+	@license Angular Panels version 1.0.3
 	ⓒ 2015 AHN JAE-HA http://github.com/eu81273
 	License: MIT
 
 */
-.dim-layer {
+
+.dimming {
 	display:none;
 }
 
-.dim-layer.open {
+.dimming.open {
 	background:#000;
 	bottom:0;
 	display:block;
@@ -17,7 +18,7 @@
 	position:fixed;
 	right:0;
 	top:0;
-	z-index:198;
+	z-index:1031;
 }
 
 .overflow-hidden {
@@ -25,6 +26,14 @@
 }
 
 .panels {
+	-ms-scrollbar-face-color: #EEE; 
+	-ms-scrollbar-highlight-color: #555;
+	-ms-scrollbar-shadow-color: #EEE; 
+	-ms-scrollbar-3dlight-color: #EEE;
+	-ms-scrollbar-arrow-color: #EEE; 
+	-ms-scrollbar-track-color: #FFF;
+	-ms-scrollbar-darkshadow-color: #EEE;
+	
 	-moz-box-shadow:none;
 	-webkit-box-shadow:none;
 	box-shadow:none;
@@ -35,59 +44,57 @@
 	pointer-events:all;
 	position:fixed;
 	transition:.2s ease-in-out;
-	z-index:199;
+	z-index:1032;
 }
 
-.panels.panel-bottom {
-	bottom:-500px;
-	height:500px;
-	width:100%;
+.panels::-webkit-scrollbar {
+	width:5px;
 }
 
-.panels.panel-bottom.open {
-	-moz-box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	-webkit-box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	bottom:0;
-	box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
+.panels::-webkit-scrollbar-thumb {
+	background-color:rgba(0,0,0,0.3);
 }
 
-.panels.panel-left {
-	height:100%;
-	left:-800px;
-	top:0;
-	width:800px;
+.panels::-webkit-scrollbar-thumb:hover {
+	background-color:rgba(0,0,0,0.5);
 }
 
-.panels.panel-left.open {
-	-moz-box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	-webkit-box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	left:0;
+.panels::-webkit-scrollbar-track {
+	background-color:transparent;
 }
 
-.panels.panel-right {
-	height:100%;
-	right:-800px;
-	top:0;
-	width:800px;
-}
 
-.panels.panel-right.open {
-	-moz-box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	-webkit-box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	right:0;
-}
-
-.panels.panel-top {
-	height:500px;
-	top:-500px;
+.panels.panel-top, .panels.panel-bottom {
 	width:100%;
 }
 
 .panels.panel-top.open {
-	-moz-box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	-webkit-box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	box-shadow:20px 0 50px 0 rgba(0,0,0,0.6);
-	top:0;
+	-moz-box-shadow:0 20px 80px 0 rgba(0,0,0,0.7);
+	-webkit-box-shadow:0 20px 80px 0 rgba(0,0,0,0.7);
+	box-shadow:0 20px 80px 0 rgba(0,0,0,0.7);
+}
+
+.panels.panel-bottom.open {
+	-moz-box-shadow:0 -20px 80px 0 rgba(0,0,0,0.7);
+	-webkit-box-shadow:0 -20px 80px 0 rgba(0,0,0,0.7);
+	box-shadow:0 -20px 80px 0 rgba(0,0,0,0.7);
+}
+
+.panels.panel-left, .panels.panel-right {
+	height:100%;
+	top: 0;
+}
+
+
+.panels.panel-left.open {
+	-moz-box-shadow:20px 0 80px 0 rgba(0,0,0,0.7);
+	-webkit-box-shadow:20px 0 80px 0 rgba(0,0,0,0.7);
+	box-shadow:20px 0 80px 0 rgba(0,0,0,0.7);
+}
+
+
+.panels.panel-right.open {
+	-moz-box-shadow:-20px 0 80px 0 rgba(0,0,0,0.7);
+	-webkit-box-shadow:-20px 0 80px 0 rgba(0,0,0,0.7);
+	box-shadow:-20px 0 80px 0 rgba(0,0,0,0.7);
 }
